--- a/data/Model.tex
+++ b/data/Model.tex
@@ -81,6 +81,15 @@ PCB放置到凹槽里面，固定水平位置
     \label{fig:Bottomv1}
 \end{figure}
 
+图纸如图~\ref{fig:Bottom2v1}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Bottom2v1.pdf}
+    \caption{v2测试底座图纸}
+    \label{fig:Bottom2v1}
+\end{figure}
+
 
 
 \section{关键参数计算}
