--- a/data/Model.tex
+++ b/data/Model.tex
@@ -92,5 +92,22 @@ PCB放置到凹槽里面，固定水平位置
 
 
 
-\section{关键参数计算}
+\section{3D打印}
 
+使用极光尔沃 A3S 3D打印机进行打样。
+
+\subsection{Debug}
+
+由于A3S是一款轻量级桌面打印机，并非商用级别，所以存在很多问题，下面对打印过程中遇到的问题进行阐述。
+
+在初次组装完成或移动打印机之后需要重新调平，在平面上五点使用调平卡片进行调平。打印的时候喷头曾多次将打印件带起来，也就是打印件粘不住平台，可能是因为喷头和平台距离远，第一层压得不够瘪，耗材粘的不牢固，需要重新调平，另外切片时“打印平台附着类型”可以选择Brim/Raft来增大模型接触面。
+
+PLA耗材曾多次断在料管里，需要按住端口的圈拔出白色料管，用新料疏通。
+
+四月一日换料出现一次喷头不出料，疑似喷头堵料，拔下料管后，使用1.5号六角扳手怼进去疏通，用新料直接捅进喷头合适角度挤压出料后在用料管里面的料挤压，最后插上料管。
+
+在维修打印机期间浪费了不少时间。
+
+\subsection{切片软件}
+
+使用开源的Ultimaker Cura 4.5作为切片软件，打印机配置选择JGAurora A3S即可导入打印机Config，耗材选Generic PLA，导入stl文件默认选项打印即可。
