--- a/data/Model.tex
+++ b/data/Model.tex
@@ -90,7 +90,16 @@ PCB放置到凹槽里面，固定水平位置
     \label{fig:Bottom2v1}
 \end{figure}
 
+\section{Model v3}
 
+图纸如图~\ref{fig:Bottom2v1}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{BottomMountTest2.pdf}
+    \caption{v3测试底座图纸}
+    \label{fig:BottomMountTest2}
+\end{figure}
 
 \section{3D打印}
 
