--- a/data/Model.tex
+++ b/data/Model.tex
@@ -92,13 +92,22 @@ PCB放置到凹槽里面，固定水平位置
 
 \section{Model v3}
 
-图纸如图~\ref{fig:Bottom2v1}。
+图纸如图~\ref{fig:BottomMountTest2}和图~\ref{fig:Bottom5v2}。
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{BottomMountTest2.pdf}
-    \caption{v3测试底座图纸}
+    \caption{v3测试底座电机固定图纸}
     \label{fig:BottomMountTest2}
+\end{figure}
+
+图纸如图~\ref{fig:Bottom2v1}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Bottom5v2.pdf}
+    \caption{v3测试底座整体图纸}
+    \label{fig:Bottom5v2}
 \end{figure}
 
 \section{3D打印}
