--- a/data/Model.tex
+++ b/data/Model.tex
@@ -112,7 +112,47 @@ PCB放置到凹槽里面，固定水平位置
 
 \section{3D打印}
 
-使用极光尔沃 A3S 3D打印机进行打样。
+使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.6\columnwidth]{JGAurora-A3S.jpg}
+    \caption{JGAurora A3S}
+    \label{fig:A3S}
+\end{figure}
+
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{ll}
+    Nozzle No.                  & Single                              \\
+    Layer thickness             & 0.1-0.3mm                           \\
+    Filament Diameter           & 1.75mm                              \\
+    Build Size                  & 205*205*205mm                       \\
+    Printing Accuracy           & 0.2mm                               \\
+    Printing Speed              & 10-150 mm/s (Suggest 80mm/s)        \\
+    Nozzle Diameter             & 0.4mm                               \\
+    Nozzle Temp.                & 180$\sim$240℃                       \\
+    Hot bed Temp.               & Room Temp.$\sim$110℃                \\
+    Machine Size                & 431(Length）*370（Width）*423（Height）  \\
+    Machine Weight              & 9kg                                 \\
+    Packing Size                & 505(Length）*430（Width）*245（Height）  \\
+    Packing Weight              & 11.5kg                              \\
+    Power                       & 180W                                \\
+    Leveling                    & Manual                              \\
+    Control Panel               & 2.8 HD Touch LCD Display            \\
+    Display Language            & English/Chinese                     \\
+    Compatible Filament         & PLA/ABS/Wood/TPU, ect               \\
+    Supported File              & STL、OBJ、G-Code                      \\
+    Hot Bed                     & Black Diamond Glass Heated platform \\
+    Pause Printing              & Support                             \\
+    Power Failure Protection    & Support                             \\
+    Filament Shortage Detection & Support                             \\
+    U Stick Connection          & Support                             \\
+    Slice Software              & Cura/Simplify3D/Slic3r/JGcreat     
+    \end{tabular}
+    \caption{JGAurora A3S Technical Specifications}
+    \label{tab:A3S}
+\end{table}
 
 \subsection{Debug}
 
