--- a/data/Model.tex
+++ b/data/Model.tex
@@ -110,6 +110,17 @@ PCB放置到凹槽里面，固定水平位置
     \label{fig:Bottom5v2}
 \end{figure}
 
+v5底盘打印效果如图~\ref{fig:Bottom2}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Bottom5.jpg}
+    \caption{v5底盘打印效果}
+    \label{fig:Bottom5}
+\end{figure}
+
+
+
 \section{3D打印}
 
 使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
