--- a/data/Example.tex
+++ b/data/Example.tex
@@ -171,7 +171,7 @@
 
 \begin{table}[htbp]
     \centering
-    \begin{tabular}{lllllllllll}
+    \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
     \diagbox{迭代次数}{$Y_{i,j}$}{节点编号} %添加斜线表头
        & 1    & 2    & 3    & 4    & 5    & 6    & 7    & 8    & 9    & 10    \\ \hline
     0  & 1.00 & 2.00 & 3.00 & 4.00 & 5.00 & 6.00 & 7.00 & 8.00 & 9.00 & 10.00 \\ \hline
@@ -237,7 +237,7 @@
 
 \begin{table}[htbp]
     \centering
-    \begin{tabular}{lllllllllll}
+    \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
     \diagbox{迭代次数}{$Y_{i,j}$}{节点编号} %添加斜线表头
        & 0    & 1    & 2    & 3    & 4    & 5    & 6    & 7    & 8    & 9     \\ \hline
     0  & 1.00 & 2.00 & 3.00 & 4.00 & 5.00 & 6.00 & 7.00 & 8.00 & 9.00 & 10.00 \\ \hline
