--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -335,3 +335,5 @@ The router can drag track segments, corners and vias. To drag an item, click on 
 \end{figure}
 
 以及焊接的时候，用除去多余焊锡的烙铁头解决AT Mega引脚相连问题时，400度加热时间过长，导致芯片损坏，使用ISP烧写程序时时断时续。
+
+重新画了PCB，4月3日终于打样完成。
