--- a/data/Example.tex
+++ b/data/Example.tex
@@ -172,6 +172,7 @@
 \begin{table}[htbp]
     \centering
     \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
+    \hline
     \diagbox{迭代次数}{$Y_{i,j}$}{节点编号} %添加斜线表头
        & 1    & 2    & 3    & 4    & 5    & 6    & 7    & 8    & 9    & 10    \\ \hline
     0  & 1.00 & 2.00 & 3.00 & 4.00 & 5.00 & 6.00 & 7.00 & 8.00 & 9.00 & 10.00 \\ \hline
@@ -220,7 +221,7 @@
     9  & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0  \\ \hline
     10 & 0 & 0 & 0 & 0 & 1 & 0 & 1 & 0 & 1 & 1  \\ \hline
     \end{tabular}
-    \caption{非强连通图反例A矩阵}
+    \caption{纠正后的强连通图A矩阵}
     \label{tab:Correct-A}
 \end{table}
 
@@ -229,7 +230,7 @@
 \begin{figure}[htbp]
     \centering
     \includegraphics{123456-Correct.pdf}
-    \caption{纠正后的非强连通图反例迭代曲线}
+    \caption{纠正后的强连通图迭代曲线}
     \label{fig:123456-Correct}
 \end{figure}
 
@@ -238,6 +239,7 @@
 \begin{table}[htbp]
     \centering
     \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
+    \hline
     \diagbox{迭代次数}{$Y_{i,j}$}{节点编号} %添加斜线表头
        & 0    & 1    & 2    & 3    & 4    & 5    & 6    & 7    & 8    & 9     \\ \hline
     0  & 1.00 & 2.00 & 3.00 & 4.00 & 5.00 & 6.00 & 7.00 & 8.00 & 9.00 & 10.00 \\ \hline
@@ -262,6 +264,6 @@
     19 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68  \\ \hline
     20 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68 & 6.68  \\ \hline
     \end{tabular}
-    \caption{纠正后的非强连通图反例迭代数据}
+    \caption{纠正后的强连通图迭代数据}
     \label{tab:123456-Correct}
 \end{table}
