--- a/data/Hardware.tex
+++ b/data/Hardware.tex
@@ -63,7 +63,7 @@
   \begin{minipage}{0.31\textwidth}
     \centering
     \includegraphics[height=4cm]{Motor-Step-1.jpg}
-    \caption{微型步进电机（反折）}
+    \caption{反折的微型步进电机}
     \label{fig:Motor-Step-1}
   \end{minipage}\hfill
   \begin{minipage}{0.31\textwidth}
