--- a/data/Hardware.tex
+++ b/data/Hardware.tex
@@ -1,7 +1,7 @@
 \chapter{测试平台硬件架构}
 \label{cha:Hardware}
 
-\section{平台选型}
+\section{ROS节点通信测试平台选型}
 
 我们选用Nvidia Jetson NANO（如图~\ref{fig:Jetson-Nano}）作为主要的开发平台，NVIDIA Jetson Nano开发人员工具包是一台功能强大的小型计算机，可并行运行多个神经网络，以用于图像分类，对象检测，分段和语音处理等应用，该平台的功耗仅为5瓦。
 
