--- a/data/UI.tex
+++ b/data/UI.tex
@@ -3,4 +3,8 @@
 
 \section{实物可视化界面}
 
-\section{UI}
+每一个小车代表一个机组/节点，小车在坐标系中位置代表各自出力，随着迭代次数进行变化。（不一定是位置，也可能是颜色，坐标系也可能会是二维的），新加进去的或者撤出来就会重新平衡。
+
+\section{演示系统UI}
+
+UI基于Jupyter Lab编写网页端的实时可视化界面。
