--- a/data/Model.tex
+++ b/data/Model.tex
@@ -1,9 +1,9 @@
 \chapter{3D打印建模}
 \label{cha:Model}
 
-\section{测试用3轮底盘}
+\section{Model v1}
 
-需要考虑到电机和定位模块的配合。
+测试用3轮底盘需要考虑到电机和定位模块的配合。
 
 定位模块外形为 $\phi$ 11.2 X 25.1mm，至少需要留12mm直径的圆柱形空间，头部距离地面不得超过2mm。定位模块外形尺寸如图~\ref{fig:Camera-Dimension}。
 
