--- a/data/Model.tex
+++ b/data/Model.tex
@@ -110,16 +110,25 @@ PCB放置到凹槽里面，固定水平位置
     \label{fig:Bottom5v2}
 \end{figure}
 
-v5底盘打印效果如图~\ref{fig:Bottom5}。
+v3底盘打印效果如图~\ref{fig:Bottom5}。
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{Bottom5.jpg}
-    \caption{v5底盘打印效果}
+    \caption{v3底盘打印效果}
     \label{fig:Bottom5}
 \end{figure}
 
+实物装配图如图~\ref{fig:Bottom-v3}。
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Bottom-v3.jpg}
+    \caption{v3底盘实物装配图}
+    \label{fig:Bottom-v3}
+\end{figure}
+
+经过几十次反复打样测试，误差做到了0.1mm级别，不需要热熔胶就能靠摩擦力牢牢卡在正确的位置，当然如果想要更高的可靠性，可以在两侧加上两小滴热熔胶。
 
 \section{3D打印}
 
