--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -58,6 +58,8 @@ KiCAD界面如图~\ref{fig:KiCAD-Interface}所示。
     \label{fig:kicad_flowchart}
 \end{figure}
 
+新的原理图按照分模块绘制的原则，各模块可复用。
+
 \section{MCU}
 
 本部分原理图如图~\ref{fig:Circuit-1}所示。其中ICSP接口可以使用ISP编程器对第一次使用的MCU烧写固件。
