--- a/data/UI.tex
+++ b/data/UI.tex
@@ -50,31 +50,31 @@ Dependence的安装：
 
 之后需要Enable Plotly并设置环境变量，执行以下命令：
 
-\begin{minted}[breaklines]{python}
-    # Avoid "JavaScript heap out of memory" errors during extension installation
-    # (OS X/Linux)
-    export NODE_OPTIONS=--max-old-space-size=4096
-    # (Windows)
-    set NODE_OPTIONS=--max-old-space-size=4096
-
-    # Jupyter widgets extension
-    jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build
-
-    # jupyterlab renderer support
-    jupyter labextension install jupyterlab-plotly --no-build
-
-    # FigureWidget support
-    jupyter labextension install plotlywidget --no-build
-
-    # Build extensions (must be done to activate extensions since --no-build is used above)
-    jupyter lab build
-
-    # Unset NODE_OPTIONS environment variable
-    # (OS X/Linux)
-    unset NODE_OPTIONS
-    # (Windows)
-    set NODE_OPTIONS=
-\end{minted}
+\begin{tcolorbox}
+  \# Avoid "JavaScript heap out of memory" errors during extension installation
+\\\# (OS X/Linux)
+\\export NODE_OPTIONS=--max-old-space-size=4096
+\\\# (Windows)
+\\set NODE_OPTIONS=--max-old-space-size=4096
+\\
+\\\# Jupyter widgets extension
+\\jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build
+\\
+\\\# jupyterlab renderer support
+\\jupyter labextension install jupyterlab-plotly --no-build
+\\
+\\\# FigureWidget support
+\\jupyter labextension install plotlywidget --no-build
+\\
+\\\# Build extensions (must be done to activate extensions since --no-build is used above)
+\\jupyter lab build
+\\
+\\\# Unset NODE_OPTIONS environment variable
+\\\# (OS X/Linux)
+\\unset NODE_OPTIONS
+\\\# (Windows)
+\\set NODE_OPTIONS=
+\end{tcolorbox}
 
 用以下代码来测试Plotly是否正确安装：
 
