--- a/data/Appendix-Code.tex
+++ b/data/Appendix-Code.tex
@@ -47,3 +47,4 @@
 % mathescape  在注释中显示Latex格式的公式
 % linenos  显示行号
 % breaklines  自动换行
+\inputminted[mathescape, linenos, breaklines]{python3}{Code/UI.py}
