--- a/data/Appendix-Code.tex
+++ b/data/Appendix-Code.tex
@@ -47,4 +47,8 @@
 % mathescape  在注释中显示Latex格式的公式
 % linenos  显示行号
 % breaklines  自动换行
+
+
+\section{Jupyter Lab UI 界面}
+\label{sec:JupyterLabUI-Code}
 \inputminted[mathescape, linenos, breaklines]{python3}{Code/UI.py}
