--- a/data/UI.tex
+++ b/data/UI.tex
@@ -9,6 +9,8 @@
 
 \section{JupyterLab环境配置}
 
+本节代码详见附录~\ref{sec:JupyterLabUI-Code}。
+
 JupyterLab安装参考TUNA的pypi 镜像使用帮助\footnote{\url{https://mirrors.tuna.tsinghua.edu.cn/help/pypi/}}，升级 pip 到最新的版本 (>=10.0.0) 后进行配置：
 
 \begin{tcolorbox}
