--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -358,3 +358,9 @@ The router can drag track segments, corners and vias. To drag an item, click on 
 以及焊接的时候，用除去多余焊锡的烙铁头解决AT Mega引脚相连问题时，400度加热时间过长，导致芯片损坏，使用ISP烧写程序时时断时续。
 
 重新画了PCB，4月3日终于打样完成。
+
+4月5日焊接完成了新板子的电机驱动系统，但是上午测试了一组，电机一直没有转，没找到原因，由于一共三组电机的驱动，下午把三组驱动都焊完了，发现只有三号电机驱动是能用的，电机在转，其他两个都没转，不知道为什么，好在有能用的说明原理上没有问题，有可能是我焊的时候哪里出错了，得仔细找找。
+
+用AD2排查发现借上12V电源后，发现3号DRV8825的12/13脚(AVREF/BVREF)电压为3.3V，但是1号为1.23V，2号为0.01V，可能IFS(Target Full-Scale Current)不足以驱动此步进电机。但实际上输出端根本没有方波信号输出，所以可能另有原因。而且3号电机发热严重，3.3V对应的IFS可能不合适。
+
+按照我的设计1.23V是正常的，非常意外出现了3.3V和0V，现在拆掉R3和R9，让1号和2号的DRV8825的12/13脚(AVREF/BVREF)电压为3.3V。
