--- a/Code/PCB-v3.tex
+++ b/Code/PCB-v3.tex
@@ -7,3 +7,12 @@
 
 电池插头+-反向，以丝印标注
 
+芯片周围留出clearance，方便拖焊。摆放可以考虑45度角摆放，方便密集的布线。
+
+最好改成单面有贴片元件的形式，方便SMT或者制作钢网涂锡膏。
+
+选用没有ThermalVias的芯片封装，否则容易焊锡粘到了ThermalVias上引起不平整。
+
+留出STEP和DIR测试/备用引脚，以便板上有一两片DRV8825无法正常使用可以外接模块。
+
+12V和5V供电太细了，要注意供电可靠性。
