--- a/data/Model.tex
+++ b/data/Model.tex
@@ -130,6 +130,10 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
 
 经过几十次反复打样测试，误差做到了0.1mm级别，不需要热熔胶就能靠摩擦力牢牢卡在正确的位置，当然如果想要更高的可靠性，可以在两侧加上两小滴热熔胶。
 
+\section{Model v4}
+
+测试过程中，发现电机固定联轴器的m3x8螺丝在转动过程中会碰到底盘。所以挖一个孔使其不会碰到底盘。
+
 \section{3D打印}
 
 使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
