--- a/data/Model.tex
+++ b/data/Model.tex
@@ -134,6 +134,8 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
 
 测试过程中，发现电机固定联轴器的m3x8螺丝在转动过程中会碰到底盘。所以挖一个孔使其不会碰到底盘。
 
+另外固定电机的中间一根柱子强度太低，容易折断，增加了他的宽度。
+
 \section{3D打印}
 
 使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
