--- a/data/Model.tex
+++ b/data/Model.tex
@@ -134,7 +134,14 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
 
 测试过程中，发现电机固定联轴器的m3x8螺丝在转动过程中会碰到底盘。所以挖一个孔使其不会碰到底盘。
 
-另外固定电机的中间一根柱子强度太低，容易折断，增加了他的宽度。
+另外固定电机的中间一根柱子强度太低，容易折断，增加了他的宽度。以上两个问题如图~\ref{fig:Bottom-v3-Problem}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\columnwidth]{Bottom-v3-Problem.jpg}
+    \caption{v3底盘两个问题}
+    \label{fig:Bottom-v3-Problem}
+\end{figure}
 
 \section{3D打印}
 
