--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -403,3 +403,23 @@ The router can drag track segments, corners and vias. To drag an item, click on 
 
 现在三个电机驱动空载输出都是正确的了，但是接上三个电机后1/3号总有一个堵转，拔下来一个就好了。怀疑是12V供电线路容量不足以两个电机同时转动。
 
+值得注意的是，现在1/2号电机驱动的VREF都是1.23V是正常的，但3号还是3.3V。尝试修一下3，可能是30kOhm断路或者50kOhm短路导致的，替换两个电阻。
+
+通过功率表测试我们知道，系统总功率随连接电机数变化如表~\ref{tab:DRV8825Debug}所示。可以看出，三个电机时，有一个电机堵转，总功率变小，说明是供电的问题。
+
+\begin{table}
+    \centering
+    \begin{tabular}{ll} 
+    \toprule
+    连接电机数 & 系统总功率/W  \\
+    \hline
+    0     & 0.6      \\
+    1     & 3.6      \\
+    2     & 4.8      \\
+    3     & 4.2      \\
+    \bottomrule
+    \end{tabular}
+    \label{tab:DRV8825Debug}
+\end{table}
+
+果然，供电从15W USB可调升降压电源充电模块DP2F换成2S锂电之后就一切正常了！
