--- a/data/Model.tex
+++ b/data/Model.tex
@@ -143,6 +143,8 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
     \label{fig:Bottom-v3-Problem}
 \end{figure}
 
+支撑PCB的柱子和PCB外形轮廓错位了30度，
+
 \section{3D打印}
 
 使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
