--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -419,6 +419,7 @@ The router can drag track segments, corners and vias. To drag an item, click on 
     3     & 4.2      \\
     \bottomrule
     \end{tabular}
+    \caption{系统总功率随连接电机数变化}
     \label{tab:DRV8825Debug}
 \end{table}
 
