--- a/data/Model.tex
+++ b/data/Model.tex
@@ -143,7 +143,7 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
     \label{fig:Bottom-v3-Problem}
 \end{figure}
 
-支撑PCB的柱子和PCB外形轮廓错位了30度，
+支撑PCB的柱子和PCB外形轮廓错位了30度，此问题之后再修改。
 
 \section{3D打印}
 
