--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -423,4 +423,11 @@ The router can drag track segments, corners and vias. To drag an item, click on 
     \label{tab:DRV8825Debug}
 \end{table}
 
-果然，供电从15W USB可调升降压电源充电模块DP2F换成2S锂电之后就一切正常了！
+果然，供电从15W USB可调升降压电源充电模块DP2F换成2S锂电之后就一切正常了！如图~\ref{fig:DRV8825Debug5}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\columnwidth]{DRV8825Debug5.jpg}
+    \caption{三个电机都转起来了}
+    \label{fig:DRV8825Debug5}
+\end{figure}
