--- a/main.tex
+++ b/main.tex
@@ -47,6 +47,7 @@
 \input{data/Motor.tex}
 \input{data/PCB.tex}
 \input{data/PCB-v2.tex}
+\input{data/PCB-v3.tex}
 \input{data/Environment.tex}
 \input{data/Program.tex}
 \input{data/UI.tex}
