--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@
 \input{data/Algorithm.tex}
 \input{data/Platform.tex}
 \input{data/Motor.tex}
+\input{data/Movement.tex}
 \input{data/PCB.tex}
 \input{data/PCB-v2.tex}
 \input{data/PCB-v3.tex}
