--- a/data/Model.tex
+++ b/data/Model.tex
@@ -143,7 +143,27 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
     \label{fig:Bottom-v3-Problem}
 \end{figure}
 
-支撑PCB的柱子和PCB外形轮廓错位了30度，此问题之后再修改。
+支撑PCB的柱子和PCB外形轮廓错位了30度，此问题之后再通过修改PCB解决。
+
+\section{Model v5}
+
+v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{fig:Pillar}，配合 M3x3 304不锈钢圆头十字盘头螺丝使用，如图~\ref{fig:Screw}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.5\columnwidth]{Pillar.jpg}
+    \caption{M3双通六角铜柱}
+    \label{fig:Pillar}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.5\columnwidth]{Screw.jpg}
+    \caption{M3x3 304不锈钢圆头十字盘头螺丝}
+    \label{fig:Screw}
+\end{figure}
+
+综合螺丝和铜柱的参数，考虑到3D打印机的打印误差，设计孔为4mm直径的圆孔。
 
 \section{3D打印}
 
